tests/cases/fail/unrelated_class_assignment.cs
class A {}
class B {}
class Program {
    static void Main() {
        A a = new B();
    }
}
